# apimeta

./: Dockerfile  docker-compose.yml  pyproject.toml  readme.md
apimeta/: app.py  schemas.py  scraper.py  tags.py  utils.py
apimeta/static/: script.js  style.css
apimeta/templates/: index.html
