[tool.poetry]
name = "apimeta"
version = "0.1.0"
description = ""
authors = ["kiriharu <kiriharu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standart"], version = "^0.13.4"}
bs4 = "^0.0.1"
httpx = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
